// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueuePanel > (Snapshot) renders collapsed empty state 1`] = `
<div
  class="flex h-full flex-col items-center justify-center gap-4 p-8 text-center transition-opacity duration-150 opacity-0"
  data-testid="queue-empty-state"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-music text-foreground-secondary opacity-50"
    fill="none"
    height="64"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="64"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 18V5l12-2v13"
    />
    <circle
      cx="6"
      cy="18"
      r="3"
    />
    <circle
      cx="18"
      cy="16"
      r="3"
    />
  </svg>
  <div>
    <div
      class="text-foreground text-lg font-bold"
    >
      Your queue is empty
    </div>
    <div
      class="text-foreground-secondary mt-2 text-sm"
    >
      Add some tracks to get started
    </div>
  </div>
</div>
`;

exports[`QueuePanel > (Snapshot) renders collapsed state 1`] = `
<div
  class="flex h-full flex-col"
  data-testid="queue-panel"
>
  <div
    class="relative h-full w-full"
  >
    <div
      class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
      style="scrollbar-width: none;"
    >
      <div
        class="flex flex-col items-center gap-1 px-1"
      >
        <div
          aria-describedby="DndDescribedBy-1"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:re:"
            >
              <div>
                <div
                  class="relative"
                  data-testid="queue-item"
                >
                  <div
                    class="pointer-events-none absolute -top-0.5 -left-0.5 h-10 w-10 rounded-md opacity-80 transition-[opacity,transform,background-color] duration-150 ease-out motion-reduce:transition-none bg-primary"
                  />
                  <div
                    class="border-border text-foreground rounded-md border-(length:--border-width) shadow-none feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none bg-primary shadow-shadow h-9 w-9 justify-center p-0"
                    role="button"
                    tabindex="0"
                  >
                    <img
                      alt="Bohemian Rhapsody"
                      class="h-full w-full object-cover transition-[filter,transform] duration-200 ease-out group-hover:scale-110 group-hover:brightness-110 group-focus-visible:scale-110 group-focus-visible:brightness-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/1/300"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby="DndDescribedBy-1"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:ri:"
            >
              <div>
                <div
                  class="relative"
                  data-testid="queue-item"
                >
                  <div
                    class="pointer-events-none absolute -top-0.5 -left-0.5 h-10 w-10 rounded-md opacity-80 transition-[opacity,transform,background-color] duration-150 ease-out motion-reduce:transition-none"
                  />
                  <div
                    class="border-border text-foreground rounded-md border-(length:--border-width) bg-background-secondary shadow-none feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none h-9 w-9 justify-center p-0"
                    role="button"
                    tabindex="0"
                  >
                    <img
                      alt="Stairway to Heaven"
                      class="h-full w-full object-cover transition-[filter,transform] duration-200 ease-out group-hover:scale-110 group-hover:brightness-110 group-focus-visible:scale-110 group-focus-visible:brightness-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/2/300"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby="DndDescribedBy-1"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:rm:"
            >
              <div>
                <div
                  class="relative"
                  data-testid="queue-item"
                >
                  <div
                    class="pointer-events-none absolute -top-0.5 -left-0.5 h-10 w-10 rounded-md opacity-80 transition-[opacity,transform,background-color] duration-150 ease-out motion-reduce:transition-none"
                  />
                  <div
                    class="border-border text-foreground rounded-md border-(length:--border-width) bg-background-secondary shadow-none feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none opacity-70 h-9 w-9 justify-center p-0"
                    role="button"
                    tabindex="0"
                  >
                    <img
                      alt="Hotel California"
                      class="h-full w-full object-cover transition-[filter,transform] duration-200 ease-out group-hover:scale-110 group-hover:brightness-110 group-focus-visible:scale-110 group-focus-visible:brightness-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/3/300"
                    />
                    <div
                      class="bg-stripes-diagonal absolute inset-x-0 bottom-0 h-1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-1"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-1"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`QueuePanel > (Snapshot) renders default state 1`] = `
<div
  class="flex h-full flex-col"
  data-testid="queue-panel"
>
  <div
    class="relative h-full w-full"
  >
    <div
      class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
      style="scrollbar-width: none;"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          aria-describedby="DndDescribedBy-0"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:r2:"
            >
              <div>
                <div
                  class="border-border text-foreground h-full rounded-md border-(length:--border-width) shadow-none group feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none bg-primary shadow-shadow w-full p-0"
                  data-is-current="true"
                  data-testid="queue-item"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bg-foreground/30 absolute top-2 bottom-2 left-0 w-1 rounded-r-full transition-[opacity,transform] duration-150 group-hover:scale-y-110 motion-reduce:transition-none"
                  />
                  <div
                    class="bg-background border-border/60 group-hover:shadow-shadow flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm border transition-[box-shadow,transform] duration-150 ease-out group-hover:-translate-y-px motion-reduce:transition-none motion-reduce:group-hover:translate-y-0"
                    data-testid="queue-item-thumbnail"
                  >
                    <img
                      alt="Bohemian Rhapsody"
                      class="h-full w-full object-cover transition-transform duration-200 ease-out group-hover:scale-105 group-focus-visible:scale-105 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/1/300"
                    />
                  </div>
                  <div
                    class="min-w-0 flex-1"
                  >
                    <div
                      class="text-foreground group-hover:text-primary truncate text-sm font-bold transition-colors duration-150 motion-reduce:transition-none"
                      data-testid="queue-item-title"
                    >
                      Bohemian Rhapsody
                    </div>
                    <div
                      class="text-foreground truncate text-xs"
                      data-testid="queue-item-artist"
                    >
                      Queen
                    </div>
                  </div>
                  <div
                    class="relative flex shrink-0 items-center justify-start"
                  >
                    <div
                      class="text-foreground mr-4 text-sm tabular-nums transition-[opacity,transform] duration-150 group-focus-within:-translate-x-1 group-focus-within:opacity-70 group-hover:-translate-x-1 group-hover:opacity-70 motion-reduce:transition-none"
                      data-testid="queue-item-duration"
                    >
                      5:54
                    </div>
                    <button
                      aria-label="Remove from queue"
                      class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border hover:shadow-shadow border-(length:--border-width) hover:-translate-y-0.5 hover:brightness-105 active:brightness-95 size-8 justify-center absolute right-4 translate-x-2 opacity-0 transition-[opacity,transform] duration-150 ease-out group-focus-within:translate-x-0 group-focus-within:opacity-100 group-hover:translate-x-0 group-hover:opacity-100 motion-reduce:transition-none"
                      data-headlessui-state=""
                      data-testid="queue-item-remove-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-x"
                        fill="none"
                        height="16"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M18 6 6 18"
                        />
                        <path
                          d="m6 6 12 12"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby="DndDescribedBy-0"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:r6:"
            >
              <div>
                <div
                  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none w-full p-0"
                  data-is-current="false"
                  data-testid="queue-item"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bg-background border-border/60 group-hover:shadow-shadow flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm border transition-[box-shadow,transform] duration-150 ease-out group-hover:-translate-y-px motion-reduce:transition-none motion-reduce:group-hover:translate-y-0"
                    data-testid="queue-item-thumbnail"
                  >
                    <img
                      alt="Stairway to Heaven"
                      class="h-full w-full object-cover transition-transform duration-200 ease-out group-hover:scale-105 group-focus-visible:scale-105 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/2/300"
                    />
                  </div>
                  <div
                    class="min-w-0 flex-1"
                  >
                    <div
                      class="text-foreground group-hover:text-primary truncate text-sm font-bold transition-colors duration-150 motion-reduce:transition-none"
                      data-testid="queue-item-title"
                    >
                      Stairway to Heaven
                    </div>
                    <div
                      class="text-foreground truncate text-xs"
                      data-testid="queue-item-artist"
                    >
                      Led Zeppelin
                    </div>
                  </div>
                  <div
                    class="relative flex shrink-0 items-center justify-start"
                  >
                    <div
                      class="text-foreground mr-4 text-sm tabular-nums transition-[opacity,transform] duration-150 group-focus-within:-translate-x-1 group-focus-within:opacity-70 group-hover:-translate-x-1 group-hover:opacity-70 motion-reduce:transition-none"
                      data-testid="queue-item-duration"
                    >
                      8:02
                    </div>
                    <button
                      aria-label="Remove from queue"
                      class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border hover:shadow-shadow border-(length:--border-width) hover:-translate-y-0.5 hover:brightness-105 active:brightness-95 size-8 justify-center absolute right-4 translate-x-2 opacity-0 transition-[opacity,transform] duration-150 ease-out group-focus-within:translate-x-0 group-focus-within:opacity-100 group-hover:translate-x-0 group-hover:opacity-100 motion-reduce:transition-none"
                      data-headlessui-state=""
                      data-testid="queue-item-remove-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-x"
                        fill="none"
                        height="16"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M18 6 6 18"
                        />
                        <path
                          d="m6 6 12 12"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-describedby="DndDescribedBy-0"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="cursor-grab"
          role="button"
          tabindex="0"
        >
          <div
            class="relative"
            data-headlessui-state=""
          >
            <div
              aria-expanded="false"
              class="cursor-pointer"
              data-headlessui-state=""
              id="headlessui-popover-button-:ra:"
            >
              <div>
                <div
                  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group feedback-surface group hover:shadow-shadow relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none hover:-translate-y-0.5 hover:brightness-105 focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:translate-y-0 active:scale-[0.98] active:shadow-none motion-reduce:transition-none motion-reduce:hover:transform-none opacity-70 w-full p-0"
                  data-is-current="false"
                  data-testid="queue-item"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bg-background border-border/60 group-hover:shadow-shadow flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm border transition-[box-shadow,transform] duration-150 ease-out group-hover:-translate-y-px motion-reduce:transition-none motion-reduce:group-hover:translate-y-0"
                    data-testid="queue-item-thumbnail"
                  >
                    <img
                      alt="Hotel California"
                      class="h-full w-full object-cover transition-transform duration-200 ease-out group-hover:scale-105 group-focus-visible:scale-105 motion-reduce:transition-none motion-reduce:group-hover:scale-100 motion-reduce:group-focus-visible:scale-100"
                      src="https://picsum.photos/seed/3/300"
                    />
                  </div>
                  <div
                    class="min-w-0 flex-1"
                  >
                    <div
                      class="text-foreground group-hover:text-primary truncate text-sm font-bold transition-colors duration-150 motion-reduce:transition-none"
                      data-testid="queue-item-title"
                    >
                      Hotel California
                    </div>
                    <div
                      class="text-foreground truncate text-xs"
                      data-testid="queue-item-artist"
                    >
                      Eagles
                    </div>
                  </div>
                  <div
                    class="relative flex shrink-0 items-center justify-start"
                  >
                    <div
                      class="text-foreground mr-4 text-sm tabular-nums transition-[opacity,transform] duration-150 group-focus-within:-translate-x-1 group-focus-within:opacity-70 group-hover:-translate-x-1 group-hover:opacity-70 motion-reduce:transition-none"
                      data-testid="queue-item-duration"
                    >
                      6:31
                    </div>
                    <button
                      aria-label="Remove from queue"
                      class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border hover:shadow-shadow border-(length:--border-width) hover:-translate-y-0.5 hover:brightness-105 active:brightness-95 size-8 justify-center absolute right-4 translate-x-2 opacity-0 transition-[opacity,transform] duration-150 ease-out group-focus-within:translate-x-0 group-focus-within:opacity-100 group-hover:translate-x-0 group-hover:opacity-100 motion-reduce:transition-none"
                      data-headlessui-state=""
                      data-testid="queue-item-remove-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-x"
                        fill="none"
                        height="16"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M18 6 6 18"
                        />
                        <path
                          d="m6 6 12 12"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="bg-stripes-diagonal absolute inset-x-0 bottom-0 h-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-0"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-0"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`QueuePanel > (Snapshot) renders empty state 1`] = `
<div
  class="flex h-full flex-col items-center justify-center gap-4 p-8 text-center transition-opacity duration-150 opacity-100"
  data-testid="queue-empty-state"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-music text-foreground-secondary opacity-50"
    fill="none"
    height="64"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="64"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 18V5l12-2v13"
    />
    <circle
      cx="6"
      cy="18"
      r="3"
    />
    <circle
      cx="18"
      cy="16"
      r="3"
    />
  </svg>
  <div>
    <div
      class="text-foreground text-lg font-bold"
    >
      Your queue is empty
    </div>
    <div
      class="text-foreground-secondary mt-2 text-sm"
    >
      Add some tracks to get started
    </div>
  </div>
</div>
`;

exports[`QueuePanel > (Snapshot) renders empty state with labels 1`] = `
<div
  class="flex h-full flex-col items-center justify-center gap-4 p-8 text-center transition-opacity duration-150 opacity-100"
  data-testid="queue-empty-state"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-music text-foreground-secondary opacity-50"
    fill="none"
    height="64"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="64"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 18V5l12-2v13"
    />
    <circle
      cx="6"
      cy="18"
      r="3"
    />
    <circle
      cx="18"
      cy="16"
      r="3"
    />
  </svg>
  <div>
    <div
      class="text-foreground text-lg font-bold"
    >
      Nothing to play
    </div>
    <div
      class="text-foreground-secondary mt-2 text-sm"
    >
      Add some tracks
    </div>
  </div>
</div>
`;
